Add and handle  Display/Edit Form

--- a/templates/pet-add-form.html
+++ b/templates/pet-add-form.html
@@ -19,7 +19,7 @@
 
     {% endfor %}
     
-    <a href="/tags" class="btn btn-outline-info">Cancel</a>
+    <a href="/" class="btn btn-outline-info">Cancel</a>
     <button type="submit" class="btn btn-success">Add</button>
 
 </form>
