--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
     <title>{% block title %} {% endblock %}</title>
 </head>
 <body>
-    <div class="container">
+    <div class="container mt-5">
     {% block content %}
 
     {% endblock %}
